# discord-bot-language-teacher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: README.md  architecture.md  aws-infrastructure.md  bot-spec.md  requirements.md
scripts/: deploy.sh
src/: config.py  main.py
src/audio/: playback.py
src/db/: query_log.py  quiz_log.py
src/handlers/: grammar_handler.py  quiz_handler.py  router.py  sentence_handler.py  word_handler.py
src/lib/: dispatcher.py  embeds.py  interaction_router.py  lang.py  scheduler.py  script.py  tts.py
src/llm/: client.py  errors.py  gemini_backend.py  gemini_client.py  openrouter_backend.py  parsing.py  persona.py
src/quiz/: daily.py  models.py  parsing.py  poster.py  prompts.py
src/reports/: anki_card.py  weekly.py  weekly_view.py
src/scripts/: run_report.py  try_grammar.py  try_quiz.py  try_sentence.py  try_word.py
tests/: test_anki_card.py  test_config.py  test_daily.py  test_dispatcher.py  test_embeds.py  test_gemini_backend.py  test_grammar_handler.py  test_interaction_router.py  test_lang.py  test_llm_client.py  test_llm_parsing.py  test_openrouter_backend.py  test_playback.py  test_poster.py  test_query_log.py  test_quiz_handler.py  test_quiz_log.py  test_router.py  test_script.py  test_sentence_handler.py  test_tts.py  test_weekly.py  test_weekly_embed.py  test_weekly_view.py  test_word_handler.py
