[project]
name = "language-teacher"
version = "0.1.0"
description = "Discord bot for English/Japanese language learning"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "openai>=1.0",
    "gtts>=2.5.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
